hphp/hack/test/typecheck/argument_unpacking/unpack_call10_unset.php
<?hh

function test(): void {
  $args = array("hello");
  // HHVM doesn't support unpacking into unset
  unset(...$args);
}
